<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="MensaViewModel1"
                type="com.emmanueldavies.mensapluse1.presentation.ui.MensaViewModel"/>
    </data>


<android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.MensaView.MainActivity">
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                tools:ignore="MergeRootFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            />
            <android.support.v7.widget.Toolbar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:theme="?attr/actionBarTheme"
                    android:minHeight="?attr/actionBarSize"
                    android:id="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    app:titleTextColor="@color/common_google_signin_btn_text_dark_default"
                    app:subtitleTextColor="@color/common_google_signin_btn_text_dark_default"
            />

            <android.support.design.widget.TabLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tabLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
            >


            </android.support.design.widget.TabLayout><![CDATA[

            >


            ]]>




            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/spinner" app:layout_constraintStart_toStartOf="@+id/toolbar"
                    app:layout_constraintEnd_toEndOf="@+id/toolbar"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="@+id/toolbar"
                    android:dropDownWidth="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_marginStart="62dp"
            />
            <TextView
                    android:text="@string/setting_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/infoTextView"
                    app:layout_constraintEnd_toEndOf="@+id/viewpager" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/viewpager" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/viewpager" android:gravity="center"
                    android:fontFamily="sans-serif-condensed" android:textSize="24sp"/>
            <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"

                    android:layout_width="387dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                    app:layout_constraintBottom_toTopOf="@+id/noInternetTexView"
                    app:layout_constraintVertical_bias="0.0">
            </android.support.v4.view.ViewPager>
            <TextView
                    android:text="@string/updating_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/noInternetTexView" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:gravity="bottom|center"
                    android:fontFamily="sans-serif-condensed-light" android:textSize="18sp"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:id="@+id/progressBar"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/viewpager"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/infoTextView"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/drawer_layout_menu"
            app:headerLayout="@layout/nav_header"
            android:fitsSystemWindows="true">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

</layout>
