...
    </string>
    <string name="settings">Settings</string>

    <string name="no_internet_message">You are offline please connect to internet to get updated Data.</string>
    <string name="no_canteens_around_location">Unfortunately there are no Canteens around your current location, please check back later when you move to a different location</string>
    <string name="snackbar_ok_button">ok</string>
    <string name="todays_menu_title">Today\'s Menu</string>
    <string name="tomorrow_menu_title">Tomorrow\'s Menu</string>
    <string name="date_format">EEEE, MMM d, \'\'yy</string>
    <string name="api_formatted_date">dd-MM-yyyy</string>
    <string name="menu_on">Menu on" "</string>
    <string name="title_date_format">E dd-MM-yyyy</string>
    <string name="setting_up">Setting Up</string>
    <string name="updating_data">Updating Data...</string>
...
