...

        <TextView
                android:layout_gravity="center"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_text_view" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="0dp" app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
                android:textStyle="bold" android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-smallcaps" android:padding="8dp"
                android:background="@color/common_google_signin_btn_text_dark_pressed"/>
...
                tools:context=".presentation.ui.MensaView.MainActivity"
                android:background="@color/common_google_signin_btn_text_light_disabled"
        >


            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
...
