<layout xmlns:android="http://schemas.android.com/apk/res/android"
>
    <data>

        <variable
                name="canteen"
                type="com.emmanueldavies.mensapluse1.domain.model.Canteen"/>
    </data>


    <!--<LinearLayout-->
    <!--android:layout_height="wrap_content"-->
    <!--tools:context=".ui.MainActivity" android:layout_width="match_parent" android:clickable="false"-->
    <!--android:clipChildren="true" android:focusableInTouchMode="false" android:touchscreenBlocksFocus="false"-->
    <!--android:background="@color/colorPrimary">-->


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_canteen_name"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:ellipsize="marquee"
            android:textAlignment="inherit"
            android:fontFamily="sans-serif-condensed" android:textSize="18sp"
            android:selectAllOnFocus="false"
            android:gravity="fill"
            android:foregroundGravity="left"
            android:paddingStart="8dp"/>
    <!--</LinearLayout>-->
</layout>

